fix(breadcrumb): update suffix icon spacing to 8px (#1924)

--- a/src/breadcrumb/styles/breadcrumb.scss
+++ b/src/breadcrumb/styles/breadcrumb.scss
@@ -15,11 +15,11 @@
     .thy-breadcrumb-item {
         margin-right: 8px;
         color: variables.$breadcrumb-text-color;
-        @include icon-text.icon-text-size(8px, 4px);
+        @include icon-text.icon-text-size(8px, 8px);
         a {
             @include link.link-variant(variables.$breadcrumb-text-color, none, variables.$primary, none);
             @include icon-text.icon-text-variant(variables.$breadcrumb-text-color, variables.$primary);
-            @include icon-text.icon-text-size(8px, 4px);
+            @include icon-text.icon-text-size(8px, 8px);
         }
         &:last-child {
             color: variables.$breadcrumb-active-color;
